[package]
name = "create-o7-app"
authors = ["Ottomated"]
version = "0.8.4"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive"] }
crossterm = "0.27.0"
directories = "5.0.1"
dunce = "1.0.4"
human-repr = "1.1.0"
inquire = "0.7.5"
once_cell = "1.19.0"
pathdiff = "0.2.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
ureq = { version = "2.10.0", features = ["json"], default-features = false }
which = "6.0.1"

[build-dependencies]
template_builder = { path = "./template_builder" }

[dev-dependencies]
tempfile = "3.10.1"
itertools = "0.13.0"

[profile.release]
opt-level = 's' # Optimize for size
lto = true
strip = true
