[package]
name = "create-o7-app"
authors = ["Ottomated"]
version = "0.12.2"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive"] }
crossterm = "0.28.1"
directories = "6.0.0"
dunce = "1.0.4"
human-repr = "1.1.0"
inquire = "0.7.5"
once_cell = "1.19.0"
pathdiff = "0.2.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
ureq = { version = "3.0.4", features = ["json"], default-features = false }
which = "7.0.2"

[build-dependencies]
template_builder = { path = "./template_builder" }

[dev-dependencies]
tempfile = "3.10.1"
itertools = "0.14.0"

[profile.release]
opt-level = 's' # Optimize for size
lto = true
strip = true
