[package]
name = "template_builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.51"
anyhow = "1.0.69"
quote = "1.0.23"
which = "4.4.0"
walkdir = "2.3.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
